@@ -1,18 +1,21 @@
 package com.example.search_as_you_type_es.service;
 
+import co.elastic.clients.elasticsearch._types.query_dsl.Operator;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
 import com.example.search_as_you_type_es.model.Book;
 import com.example.search_as_you_type_es.repository.BookRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
+import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.data.elasticsearch.core.suggest.Completion;
-import org.springframework.data.elasticsearch.core.query.Query;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
-
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class BookService {
@@ -34,12 +37,12 @@ public class BookService {
             }
         });
         return StreamSupport.stream(bookRepository.saveAll(books).spliterator(), false)
-            .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Book> getAllBooks() {
         return StreamSupport.stream(bookRepository.findAll().spliterator(), false)
-            .collect(Collectors.toList());
+                .toList();
     }
 
     public Book getBookById(String id) {
@@ -48,8 +51,8 @@ public class BookService {
 
     public List<Book> searchByTitle(String title) {
         try {
-            co.elastic.clients.elasticsearch._types.query_dsl.Query query =
-                co.elastic.clients.elasticsearch._types.query_dsl.Query.of(q -> q
+            Query query =
+                Query.of(q -> q
                     .bool(b -> b
                         .should(s -> s
                             .matchPhrase(m -> m
@@ -62,7 +65,7 @@ public class BookService {
                             .match(m -> m
                                 .field("title")
                                 .query(title)
-                                .operator(co.elastic.clients.elasticsearch._types.query_dsl.Operator.And)
+                                .operator(Operator.And)
                                 .boost(3.0f)
                             )
                         )
@@ -77,19 +80,19 @@ public class BookService {
                     )
                 );
 
-            org.springframework.data.elasticsearch.client.elc.NativeQuery searchQuery = 
+           NativeQuery searchQuery =
                 org.springframework.data.elasticsearch.client.elc.NativeQuery.builder()
                     .withQuery(query)
                     .build();
 
-            org.springframework.data.elasticsearch.core.SearchHits<Book> searchHits = 
+            SearchHits<Book> searchHits =
                 elasticsearchOperations.search(searchQuery, Book.class);
 
             return searchHits.stream()
-                .map(org.springframework.data.elasticsearch.core.SearchHit::getContent)
-                .collect(Collectors.toList());
+                .map(SearchHit::getContent)
+                    .toList();
         } catch (Exception e) {
-            System.err.println("Error searching by title: " + e.getMessage());
+            log.error("Error searching by title: {}", e.getMessage());
             e.printStackTrace();
             return List.of();
         }
